<resources>
    <string name="app_name">Launcher</string>
    <string name="app_picker_name">Application</string>
    <string name="bookmark_picker_name">Bookmark</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">New contact</string>
    <string name="button_book_search">Search </string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Call</string>
    <string name="button_email"> E-mail</string>
    <string name="button_get_directions">Address</string>
    <string name="button_mms">Message</string>
    <string name="button_ok">Ok</string>
    <string name="button_open_browser">Browser</string>
    <string name="button_product_search">Search</string>
    <string name="button_search_book_contents">Search</string>
    <string name="button_share_app">Share application</string>
    <string name="button_share_bookmark">Share bookmark</string>
    <string name="button_share_by_email">Share by E-mail</string>
    <string name="button_share_by_sms">Share by message</string>
    <string name="button_share_clipboard">Share clipboard</string>
    <string name="button_share_contact">Share contacts</string>
    <string name="button_show_map">Map</string>
    <string name="button_sms">Message</string>
    <string name="button_web_search">Search</string>
    <string name="button_wifi">Contact network</string>
    <string name="contents_contact">Contact information</string>
    <string name="contents_email">E-mail address</string>
    <string name="contents_location">Longitude and latitude</string>
    <string name="contents_phone"> Phone number</string>
    <string name="contents_sms">Phone number</string>
    <string name="contents_text">Text</string>
    <string name="history_clear_one_history_text">Delete</string>
    <string name="history_clear_text">Delete history</string>
    <string name="history_email_title">History of barcode scaner</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No history</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">MECARD</string>
    <string name="menu_encode_vcard">vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Create a QR code</string>
    <string name="msg_bulk_mode_scanned">Batched mode:save barcode</string>
    <string name="msg_camera_framework_bug">Sorry,something wrong with camera,please reboot </string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Data</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Please put the bar code in the viewfinder</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Can not generate barcode</string>
    <string name="msg_error">Incorrect</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry,can not open application,please check barcode</string>
    <string name="msg_invalid_value">Invalid</string>
    <string name="msg_redirect">Redirection</string>
    <string name="msg_sbc_book_not_searchable">Sorry, can not find the book</string>
    <string name="msg_sbc_failed">Sorry, something go wrong</string>
    <string name="msg_sbc_no_page_returned">No more page</string>
    <string name="msg_sbc_page">Pages</string>
    <string name="msg_sbc_results">Result</string>
    <string name="msg_sbc_searching_book">Search…</string>
    <string name="msg_sbc_snippet_unavailable">Excerpt does not work</string>
    <string name="msg_share_explanation">You can share the bar code by displaying the bar code on your cell phone and using the other cell phones to scan the bar code</string>
    <string name="msg_share_text">Or type some text </string>
    <string name="msg_sure">OK?</string>
    <string name="msg_unmount_usb">Sorry,can not read SD card</string>
    <string name="preferences_actions_title">Scanning success</string>
    <string name="preferences_auto_focus_title">Autofocus</string>
    <string name="preferences_auto_open_web_title">Automatically open a web page</string>
    <string name="preferences_bulk_mode_summary">Continuous scan and save multiple barcodes</string>
    <string name="preferences_bulk_mode_title">Batched mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Replace: %s=content, %f=format, %t=type</string>
    <string name="preferences_custom_product_search_title">Custom</string>
    <string name="preferences_decode_1D_industrial_title">Bar code:industry</string>
    <string name="preferences_decode_1D_product_title">Bar code:merchandise</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">QR code</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">No scene matching</string>
    <string name="preferences_disable_continuous_focus_summary">standard calibration</string>
    <string name="preferences_disable_continuous_focus_title">Non continuous focus</string>
    <string name="preferences_disable_exposure_title">Unexposed</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">Auto</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_front_light_summary">Set flash mode</string>
    <string name="preferences_front_light_title">Flash</string>
    <string name="preferences_general_title">Scan settings</string>
    <string name="preferences_history_summary">Automatically save bar codes to history</string>
    <string name="preferences_history_title">Save to history</string>
    <string name="preferences_invert_scan_summary">The white bar code on black background useful to part of devices</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_name">Options</string>
    <string name="preferences_orientation_title">Non auto rotate</string>
    <string name="preferences_play_beep_title">Prompt Tone</string>
    <string name="preferences_remember_duplicates_summary"> Save duplicate record to history</string>
    <string name="preferences_remember_duplicates_title">Save duplicate record</string>
    <string name="preferences_result_title">Search settings</string>
    <string name="preferences_scanning_title">Bar code type</string>
    <string name="preferences_search_country">country</string>
    <string name="preferences_supplemental_summary">More</string>
    <string name="preferences_supplemental_title">More</string>
    <string name="preferences_vibrate_title">Vibration</string>
    <string name="result_address_book">contacts</string>
    <string name="result_calendar">Calendar</string>
    <string name="result_email_address">E-mail address</string>
    <string name="result_geo">Coordinates</string>
    <string name="result_isbn">Books</string>
    <string name="result_product">Merchandise</string>
    <string name="result_sms">Phone number</string>
    <string name="result_tel">Phone number</string>
    <string name="result_text">Text</string>
    <string name="result_uri">URL </string>
    <string name="result_wifi">Wi-Fi settings</string>
    <string name="sbc_name">Google 图书搜索</string>
    <string name="wifi_changing_network"> Wi-Fi \u2026</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linearlayoutmanager">LinearLayoutManager</string>
    <string name="declare">Notice:Be careful，the floor wet,keep warm!</string>
    <string name="declare_content">%1$s&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%2$s</string>
    <string name="network_illegal">Network does not work</string>
    <string name="network_anomaly">The network does work, please check the network setting！</string>
    <string name="network_cancle">The network disconnect, please reconnect</string>
    <string name="network_execute">It will disconnect network，continue or not ?</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="device_name">Device name</string>
    <string name="voice_notice">Voice guide</string>
    <string name="time_setting">Time setting</string>
    <string name="blue_tooth">Bluetooth</string>
    <string name="eyes_verify">Binocular calibration</string>
    <string name="basic_settting">Basic settings</string>
    <string name="time_setting_illeagel">Time setting</string>
    <string name="open_blue_tooth">开放检测</string>
    <string name="device_matched">Paired devices</string>
    <string name="device_search">Available devices</string>
    <string name="cancel_match">Unpair</string>
    <string name="name_setting_illeagel">Please input device name</string>
    <string name="blue_tooth_setting_illeagel">Please choose bluetooth</string>
    <string name="password_error">Please input correct administator password</string>
    <string name="blue_tooth_error">Failed</string>
    <string name="blue_seach">Scan</string>
    <string name="hint_width">Please input width</string>
    <string name="hint_height">Please input height</string>
    <string name="start_gather">Collect</string>
    <string name="finish">Done</string>
    <string name="zhuyi">注意变化棋盘格的角度和拍摄齐全</string>
    <string name="deng_off">Off</string>
    <string name="deng_on">On</string>
    <string name="jiaozhunqian">Pre-calibration settings</string>
    <string name="edit_jianpan">Input line and column number of checkerboard</string>
    <string name="edit_hint">Successful times (More successful times more accurate)</string>
    <string name="anima_hint">Change the angle during photo shoot as below, speed up calibration </string>
    <string name="jiaozhun_wait">Calibrating, take several minutes, please wait...</string>
    <string name="num_password">password</string>
    <string name="call">Call</string>
    <string name="call_tonghua">Call</string>
    <string name="qr_code">QR code</string>
    <string name="liuyan">Message</string>
    <string name="call_wuguan">Contact Property</string>
    <string name="bbs">Press the button to start a message, release a button to send a message and slide up the finger to cancel</string>
    <string name="person_name">Name</string>
    <string name="time_start">Start</string>
    <string name="save">Save</string>
    <string name="finger_notice">Please put the finger on sensor for several minutes</string>
    <string name="rename">Rename</string>
    <string name="setting">Settings</string>
    <string name="edit_hushihao">Please input house number</string>
    <string name="edit_lizi"> For example: 0101(01:first floor,01:house number)</string>
    <string name="device_name_lizi"> 601 A# Sino-Ocean International Center Gongshu district Hangzhou Zhejang province</string>
    <string name="please_edit_pwd">Please input password</string>
    <string name="edit_pwd_error">The password is not correct, please input again</string>
</resources>