<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000b2e">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="260dp"
                android:layout_height="52dp"
                android:layout_marginLeft="32dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />


            <View
                android:layout_width="1.5dp"
                android:layout_height="60dp"
                android:layout_marginLeft="19dp"
                android:background="#03e2fc" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/device_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2017-01-17 15:36"
                    android:textColor="#03e2fc"
                    android:textSize="26dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:maxLines="1"
                    android:text="@string/device_name_lizi"
                    android:textColor="#03e2fc"
                    android:textSize="22dp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/gonggao_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/guanggao_bg"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="14dp"
            android:singleLine="true"
            android:text="@string/declare"
            android:textColor="@color/white"
            android:textSize="32dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.donkingliang.banner.CustomBanner
                android:id="@+id/custom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:indicatorStyle="NONE" />

            <SurfaceView
                android:id="@+id/camera_surfaceview"
                android:layout_width="426dp"
                android:layout_height="320dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </LinearLayout>


    <rk.device.launcher.widget.ArcMenu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/liuyan"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_manager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/call_wuguan"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/setting"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_pwd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/num_password"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/call"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:src="@drawable/menu_qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/qr_code"
                android:textColor="#71fc67"
                android:textSize="19dp" />

        </LinearLayout>


        <ImageView
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/anniu" />


    </rk.device.launcher.widget.ArcMenu>


</RelativeLayout>