<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_normal_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout style="@style/ll_set_item">

            <TextView
                style="@style/tv_set_label"
                android:text="@string/device_name" />

            <EditText
                android:id="@+id/et_device_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_27"
                tools:text="航空母舰" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/blue_31598a" />

        <LinearLayout style="@style/ll_set_item">

            <TextView
                style="@style/tv_set_label"
                android:text="@string/voice_notice" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkbox_voice"
                android:checked="true"
                style="@style/style_check_box" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/blue_31598a" />

        <LinearLayout
            android:id="@+id/ll_set_time"
            style="@style/ll_set_item">

            <TextView
                style="@style/tv_set_label"
                android:text="@string/time_setting" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="right"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_27" />

            <ImageView style="@style/more_tag" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/blue_31598a" />

        <LinearLayout
            android:id="@+id/ll_set_blue_tooth"
            style="@style/ll_set_item">

            <TextView
                style="@style/tv_set_label"
                android:text="@string/blue_tooth" />

            <TextView
                android:id="@+id/tv_blue_tooth_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <ImageView style="@style/more_tag" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/blue_31598a" />

        <LinearLayout
            android:id="@+id/eyes_verify"
            style="@style/ll_set_item">

            <TextView
                style="@style/tv_set_label"
                android:text="@string/eyes_verify" />

            <TextView
                android:id="@+id/eyes_verify_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <ImageView style="@style/more_tag" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/blue_31598a" />

        <Button
            android:id="@+id/btn_finish_setting"
            style="@style/btn_finish"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="60dp"
            android:text="完成设置" />

    </LinearLayout>

</LinearLayout>