<?xml version="1.0" encoding="utf-8"?>
<rk.device.launcher.widget.CustomFrameLayout
    android:id="@+id/custom_framelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_dialog_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="111dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                tools:text="请输入“RUANKU”的密码" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="33dp"
                android:background="@drawable/shape_bg_et_password"
                android:hint="@string/please_edit_pwd"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_ccccc"
                android:textSize="@dimen/sp_22" />

            <LinearLayout
                android:id="@+id/ll_error"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                android:layout_marginLeft="33dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/password_err" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:text="@string/edit_pwd_error"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_22" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_b7dbf9" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_dialog_btn_cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/color_b7dbf9" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_dialog_btn_confirm"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22" />


        </LinearLayout>

    </LinearLayout>


</rk.device.launcher.widget.CustomFrameLayout>