<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_normal_bg"
    android:orientation="vertical">


    <include layout="@layout/topbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/call_edit_bg">


        <TextView
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:gravity="center_vertical"
            android:hint="@string/edit_hushihao"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#999999"
            android:textSize="26dp" />


        <ImageView
            android:id="@+id/clear"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/edit_clear" />


    </RelativeLayout>


    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="14dp"
        android:text="@string/edit_lizi"
        android:textColor="#338eff"
        android:textSize="26dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/call_commit"
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:background="@drawable/call_button">


                <ImageView
                    android:id="@+id/commit_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/call_commit" />


                <TextView
                    android:id="@+id/commit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="50dp"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/clear_dan"
                android:layout_width="152dp"
                android:layout_height="152dp"
                android:background="@drawable/call_clear_bg" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
